<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.SettingActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/setting"
        android:textSize="30sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/theme"
        android:textSize="24sp" />

    <RadioGroup
        android:id="@+id/radioGroupTheme"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/bg_radio_groud"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="6">

        <RadioButton
            android:id="@+id/rdThemeAuto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/bg_radio_checked"
            android:button="@android:color/transparent"
            android:gravity="center"
            android:text="@string/theme_auto"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/rdThemeBlack"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/bg_radio_checked"
            android:button="@android:color/transparent"
            android:gravity="center"
            android:text="@string/theme_black"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/rdThemeLight"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/bg_radio_checked"
            android:button="@android:color/transparent"
            android:gravity="center"
            android:text="@string/theme_light"
            android:textColor="@color/white"
            android:textSize="24sp" />

    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/unit"
        android:textSize="24sp" />

    <RadioGroup
        android:id="@+id/radioGroupTemp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/bg_radio_groud"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="6">

        <RadioButton
            android:id="@+id/rdTemC"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/bg_radio_checked"
            android:button="@android:color/transparent"
            android:gravity="center"
            android:text="@string/temp_c"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/rdTemF"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/bg_radio_checked"
            android:button="@android:color/transparent"
            android:gravity="center"
            android:text="@string/temp_f"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/rdTemK"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/bg_radio_checked"
            android:button="@android:color/transparent"
            android:gravity="center"
            android:text="@string/temp_k"
            android:textColor="@color/white"
            android:textSize="24sp" />

    </RadioGroup>

    <LinearLayout
        android:id="@+id/linearLang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:weightSum="4"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language"
            android:layout_weight="2"
            android:layout_margin="10dp"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tvLang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_margin="10dp"
            android:layout_weight="2"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/spinnerLang"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:visibility="invisible"
            android:spinnerMode="dialog" />

    </LinearLayout>

</LinearLayout>