<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SearchActivity">

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:indeterminate="false"
        android:indeterminateTint="#2DCC70"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/tvCityName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/search"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/edEnterCityName"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="@drawable/bg_radio_groud"
        android:hint="@string/enter_city_name"
        android:imeOptions="actionGo"
        android:inputType="text"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColor="#B3FFFFFF"
        android:textColorHint="@color/white"
        app:layout_constrainedWidth="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/tvCan"
        app:layout_constraintTop_toBottomOf="@id/text"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/tvCan"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:paddingStart="5dp"
        android:paddingEnd="15dp"
        android:text="@string/can"
        android:textSize="15sp"
        android:visibility="gone"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text" />

    <TextView
        android:id="@+id/tvCurrent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/current"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edEnterCityName" />

    <TextView
        android:id="@+id/tvCityName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="start"
        android:textSize="20sp"
        app:layout_constrainedWidth="true"
        app:layout_constraintLeft_toRightOf="@id/tvCurrent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edEnterCityName" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCityName">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/bg_weather"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:paddingStart="15dp"
                android:paddingTop="5dp"
                android:paddingEnd="15dp"
                android:paddingBottom="5dp"
                android:weightSum="6"
                app:layout_constrainedWidth="true">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvLocation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/my_location"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvCity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/helvetica_arial"
                        android:text="---" />

                    <TextView
                        android:id="@+id/tvDescription"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="---" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                    <TextView
                        android:id="@+id/tvTemp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:textSize="35sp" />

                    <ProgressBar
                        android:id="@+id/progressBar"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:indeterminateTint="#ff00"
                        android:visibility="gone" />

                    <ImageView
                        android:id="@+id/imgWeather"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        tools:ignore="ContentDescription" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/tvFavorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:paddingBottom="5dp"
                android:text="@string/favorite"
                android:visibility="invisible" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>