<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="currentWeather"
            type="com.hoang.weatherhb.models.CurrentWeather" />

        <import type="com.hoang.weatherhb.utils.FormatData" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".fragment.TodayFragment">

            <!-- TODO: Update blank fragment layout -->
            <TextView
                android:id="@+id/tvTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/helvetica_arial"
                android:text="--"
                android:textSize="70sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imgWeather"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvLike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/feels_like"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTemp" />

            <TextView
                android:id="@+id/tvFeels_Like"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="--"
                android:textSize="18sp"
                app:layout_constraintLeft_toRightOf="@id/tvLike"
                app:layout_constraintTop_toBottomOf="@id/tvTemp" />

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginStart="24dp"
                android:gravity="center"
                android:text="@{currentWeather.weather.get(0).description}"
                android:textSize="18sp"
                app:layout_constrainedWidth="true"
                app:layout_constraintLeft_toRightOf="@id/tvFeels_Like"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTemp" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/bg_weather"
                android:orientation="horizontal"
                android:paddingLeft="15dp"
                android:paddingTop="10dp"
                android:paddingRight="15dp"
                android:paddingBottom="5dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/tvDescription"
                tools:ignore="MissingConstraints" />

            <LinearLayout
                android:id="@+id/linearToday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/bg_weather"
                android:orientation="horizontal"
                android:padding="15dp"
                app:layout_constraintTop_toBottomOf="@id/recyclerView">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/helvetica_arial"
                    android:text="@string/today_detail"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/helvetica_arial"
                    android:gravity="right"
                    android:text="@{currentWeather.todayDetail()}"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutSunrise"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/bg_weather"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/linearToday">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="4">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:text="@string/sunrise"
                        android:textSize="15sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:text="@string/sunset"
                        android:textSize="15sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="4">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:text="@{FormatData.time(currentWeather.sys.getSunrise())}"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:text="@{FormatData.time(currentWeather.sys.getSunset())}"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:src="@drawable/sunrise" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/bg_weather"
                android:orientation="vertical"
                android:padding="10dp"
                app:layout_constraintTop_toBottomOf="@id/layoutSunrise">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/temp_5day"
                    android:textSize="18sp" />

                <com.github.mikephil.charting.charts.BarChart
                    android:id="@+id/barChart"
                    android:layout_width="match_parent"
                    android:layout_height="300dp" />

                <TextView
                    android:id="@+id/tvDayRain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:visibility="invisible"
                    android:text="@string/probability_rain"
                    android:textSize="18sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerRain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</layout>